...
                android:layout_height="50dp"
                android:background="#eeeeee"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/team_logo"/>

            <TextView
                android:id="@+id/teamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@{team.name_display_full}"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_gravity="center_horizontal" />
...
