...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.player.PlayerFragment">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@{playerViewModel.playerInfo.name_display_first_last}"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
...
